<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="#d9d9d9"
    tools:context="bg.android.isma.emotionlog.LoginActivity">


    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:drawableLeft="@drawable/username"
        android:drawableStart="@drawable/username"
        android:drawableTint="#ffffff"
        android:drawableTintMode="multiply"
        android:ems="10"
        android:hint="@string/email"
        android:textColorHint="#000000"
        android:inputType="textPersonName"
        tools:ignore="UnusedAttribute"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:textColorHint="#000000"
        android:layout_below="@+id/et_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_password"
            android:drawableLeft="@drawable/password"
            android:drawableStart="@drawable/password"
            android:hint="@string/pass_word"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/b_Sign_in"
        style="@android:style/Widget.Button.Inset"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/layout_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:background="#00ff00"
        android:text="@string/login"
        android:textSize="20sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/rb_Remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@+id/b_Sign_in"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tv_forgot_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/rb_Remember"
        android:layout_alignBottom="@+id/rb_Remember"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/f_details"
        android:textColor="#00ff00"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/member"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_below="@+id/rb_Remember"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_here"
        android:textColor="#00ff00"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_alignBottom="@+id/tv_member"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</android.widget.RelativeLayout>
